--- a/app/assets/stylesheets/components/_user-content.scss
+++ b/app/assets/stylesheets/components/_user-content.scss
@@ -38,7 +38,7 @@
       font-size: 24px;
       color: $black-fade;
       line-height: 1.375em;
-      letter-spacing: .035em;
+      // letter-spacing: .035em;
       font-family: $font-display;
     }
     a {
