--- a/app/assets/stylesheets/pages/_endeavors.scss
+++ b/app/assets/stylesheets/pages/_endeavors.scss
@@ -68,6 +68,7 @@
         h1, h2, h3 {
           color: $black;
           text-transform: none;
+          letter-spacing: 0;
         }
 
         strong {
